src/tests/testfiles/binary-operators/36.txt
testfiles/binary-operators/36.c:10:32: error: function 'sum' undeclared
   (k = 5, (i = 5 + (6, 7, 8) * sum(1, 2)), "hello");
                                ^
